[config] Explain 측정용 세팅