@@ -24,4 +24,4 @@ COPY --from=builder /app/build/libs/*.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-Djdk.tracePinnedThreads=full", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
